collection item: fix font-size on mobile

--- a/assets/momo-collection.styles.scss
+++ b/assets/momo-collection.styles.scss
@@ -107,7 +107,10 @@
             left: 30px;
             display: flex;
             justify-content: center;
+            
             font-size: 30px;
+            @include xs { font-size: 20px; }
+
             letter-spacing: 1px;
             color: white;
             line-height: 1.9rem;
